<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/calculadora"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculadora"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/valor1"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:hint="@string/valor"
        android:inputType="number"
        android:layout_marginTop="20dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/calculadora"/>

    <EditText
        android:id="@+id/valor2"
        android:layout_width="116dp"
        android:layout_height="65dp"
        android:layout_marginTop="44dp"
        android:hint="@string/valor_2"
        android:inputType="number"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/valor1" />

    <TextView
        android:id="@+id/resultado"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:hint="@string/resultado"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@id/valor1"
        app:layout_constraintEnd_toEndOf="parent"/>
    <!--Agora é o Radio group-->
    <RadioGroup
        android:id="@+id/operacoes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/valor2">

        <RadioButton
            android:id="@+id/options_somar"
            android:layout_width="87dp"
            android:layout_height="wrap_content"
            android:text="@string/somar" />

        <RadioButton
            android:id="@+id/options_subtrair"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subtrair" />

        <RadioButton
            android:id="@+id/options_multiplicar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/multiplicar" />

        <RadioButton
            android:id="@+id/options_dividir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dividir" />
    </RadioGroup>

    <Button
        android:id="@+id/bt_calcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/calcular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/operacoes"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>